# needle

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  ARCHITECTURE_SERVICES.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  GOVERNANCE.md  Makefile  QUICKSTART.md  README.md  ROADMAP.md  SECURITY.md  clippy.toml  codecov.yml  deny.toml  docker-compose.source.yml  docker-compose.yml  justfile  mcp-registry.json  pyproject.toml  rustfmt.toml
.cargo/: config.toml
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  FUNDING.yml  GOOD_FIRST_ISSUES.md  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/workflows/: bench.yml  ci.yml  docker.yml  docs.yml  feature-matrix.yml  fuzz.yml  playground.yml  release.yml  security.yml  tech-debt.yml
benches/: README.md  benchmarks.rs  index.rs  insert.rs  multivec.rs  search.rs  sparse.rs
crates/: README.md
crates/needle-cli/: Cargo.toml
crates/needle-cli/src/: commands.rs  features.rs  handlers.rs  lib.rs  main.rs
crates/needle-core/: Cargo.toml
crates/needle-core/src/: distance.rs  error.rs  lib.rs
crates/needle-python/: Cargo.toml
crates/needle-python/src/: lib.rs
deploy/: README.md  prometheus.yml
deploy/edge/: README.md  cloudflare-worker.js  wrangler.toml
deploy/grafana/: README.md  needle-collections.json  needle-dashboard.json  needle-overview.json
deploy/kubernetes/: configmap.yaml  crd.yaml  deployment.yaml  hpa.yaml  pvc.yaml  service.yaml  statefulset.yaml
docs/: ARCHITECTURE_SERVICES.md  MIGRATION.md  OPERATIONS.md  README.md  SUPPORT.md  TODO-test-coverage.md  WASM_GUIDE.md  api-reference.md  api-stability.md  architecture.md  benchmarks.md  deployment.md  distributed-operations.md  experimental-triage.md  feature-flags.md  how-to-guides.md  http-quickstart.md  index-selection-guide.md  language-bindings.md  launch-announcement.md  mcp-integration.md  migration-upgrade-guide.md  needleql.md  ollama-rag-guide.md  openapi.json  production-checklist.md  production-guide.md  python.md  rag-quickstart.md  search-cookbook.md
docs/adr/: 0001-single-file-storage-with-memory-mapping.md  0002-hnsw-as-primary-index-algorithm.md  0003-interior-mutability-with-parking-lot-rwlock.md  0004-generation-based-dirty-tracking.md  0005-mongodb-style-filter-query-language.md  0006-async-api-as-optional-feature-layer.md  0007-multiple-quantization-strategies.md  0008-structured-error-handling-with-thiserror.md  0009-modular-feature-flag-architecture.md  0010-raft-based-replication-layer.md  0011-multiple-distance-functions-with-simd.md  0012-hybrid-search-with-bm25-and-rrf-fusion.md  0013-cloud-storage-abstraction-layer.md  0014-gpu-acceleration-architecture.md  0015-streaming-cdc-integration.md  0016-time-travel-with-mvcc.md  0017-predictive-autoscaling.md  0018-federated-multi-instance-search.md  0019-embedded-model-finetuning.md  0020-unified-rag-pipeline.md  0021-query-result-caching-with-lru.md  0022-multi-index-architecture.md  0023-dual-vector-id-system.md  0024-observable-query-execution.md  0025-write-ahead-logging.md  0026-needleql-query-language.md  0027-namespace-based-multi-tenancy.md  0028-semantic-knowledge-graph.md  0029-rbac-and-audit-logging-security-model.md  0030-two-stage-retrieval-with-external-rerankers.md  0031-crdt-based-edge-sync-for-offline-first.md  0032-backup-and-point-in-time-recovery.md  0033-consistent-hashing-for-horizontal-sharding.md  0034-schema-versioning-and-migrations.md  0035-searchable-vector-encryption.md  0036-langchain-compatible-vectorstore-interface.md  0037-multi-vector-colbert-style-retrieval.md  0038-sparse-vector-and-inverted-index-support.md  0039-cross-platform-bindings-architecture.md  0040-diskann-and-ivf-alternative-index-types.md  (+2 more)
examples/: README.md  basic_usage.rs  batch_operations.rs  claude_desktop_config.json  diskann_usage.rs  embedding_providers_usage.rs  encryption_usage.rs  error_handling.rs  filtered_search.rs  hybrid_search.rs  image_search.rs  metrics_usage.rs  multi_tenant.rs  multi_vector.rs  persistence.rs  pipeline.yml  quantization.rs  quickstart.rs  rag_chatbot.rs  rag_openai.py  server_usage.rs  sharding.rs  sparse_vectors.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_distance.rs  fuzz_metadata_filter.rs  fuzz_nl_filter.rs  fuzz_query_parser.rs
helm/needle/: .helmignore  Chart.yaml  README.md  values-dev.yaml  values-prod.yaml  values.yaml
proto/: needle.proto
python/: README.md
python/needle_db/: __init__.py  pyproject.toml
python/needle_langchain/: README.md  __init__.py  pyproject.toml
python/needle_llamaindex/: README.md  __init__.py  pyproject.toml
python/tests/: test_langchain.py  test_langchain_server.py  test_llamaindex.py  test_llamaindex_server.py
scripts/: ann-benchmark.sh  doctor.sh  new-example.sh  new-module.sh  playground.sh  quickstart.sh  seed-demo.sh  verify-docs.sh
scripts/ann-benchmark-docker/: Dockerfile  run_benchmark.py
sdk/go/: errors.go  (+7 more)
src/: README.md  agentic_memory.rs  analytics.rs  anomaly.rs  async_api.rs  auto_embed.rs  autoscaling.rs  backup.rs  beta_api.rs  cloud_control.rs  cloud_storage.rs  clustering.rs  collaborative_search.rs  collection.rs  collection_branch.rs  crdt.rs  cross_collection.rs  database.rs  dedup.rs  dimreduce.rs  diskann.rs  distance.rs  distributed_hnsw.rs  drift.rs  edge_partitioning.rs  edge_runtime.rs  embeddings.rs  embeddings_gateway.rs  embeddings_provider.rs  encryption.rs  error.rs  experimental_api.rs  federated.rs  finetuning.rs  gpu.rs  graph.rs  graph_vector_index.rs  graphrag.rs  hnsw.rs  hooks.rs  (+58 more)
tests/: advanced_features_tests.rs  async_api_tests.rs  binding_tests.rs  cli_tests.rs  concurrent_tests.rs  corruption_tests.rs  edge_cases.rs  integration_tests.rs  property_tests.rs  server_tests.rs  service_integration_tests.rs  wasm_tests.rs
website/: docusaurus.config.ts  package-lock.json  sidebars.ts
(+558 files in other folders)
