[package]
name = "needle"
version = "0.1.0"
edition = "2021"
authors = ["Anthropic <support@anthropic.com>"]
description = "An embedded vector database - SQLite for vectors"
license = "MIT"
keywords = ["vector", "database", "embedding", "hnsw", "similarity-search"]
categories = ["database", "algorithms", "science"]
repository = "https://github.com/anthropics/needle"
readme = "README.md"

[lib]
name = "needle"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "needle"
path = "src/main.rs"

[dependencies]
# Error handling
thiserror = "2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Memory mapping
memmap2 = "0.9"

# Random number generation
rand = "0.8"

# Ordered floats for comparison
ordered-float = "4.0"

# Parking lot for faster locks
parking_lot = "0.12"

# Parallelization
rayon = "1.10"

# Logging/tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }

# CLI
clap = { version = "4", features = ["derive"] }

# HTTP Server (optional)
axum = { version = "0.7", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["cors", "trace", "limit", "timeout"], optional = true }
futures = { version = "0.3", optional = true }
governor = { version = "0.6", optional = true }

# Embedding providers (optional)
async-trait = { version = "0.1", optional = true }
reqwest = { version = "0.12", features = ["json"], optional = true }

# Metrics (optional)
prometheus = { version = "0.14", optional = true }

# Text indexing for hybrid search (optional)
rust-stemmers = { version = "1.2", optional = true }

# Python bindings (optional)
pyo3 = { version = "0.23", features = ["extension-module"], optional = true }
pythonize = { version = "0.23", optional = true }

# WASM bindings (optional)
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", optional = true }

# UniFFI for Swift/Kotlin bindings (optional)
uniffi = { version = "0.28", optional = true }

# ONNX Runtime for embedding inference (optional, unstable - uses pre-release version)
ort = { version = "2.0.0-rc.9", optional = true }
ndarray = { version = "0.16", optional = true }
tokenizers = { version = "0.20", optional = true }

# TUI (optional)
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.28", optional = true }

# File hashing for backup
sha2 = "0.10"

# Authentication - JWT support (optional, used with server)
hmac = { version = "0.12", optional = true }
base64 = { version = "0.22", optional = true }

# Cryptography - AEAD encryption
chacha20poly1305 = "0.10"
hkdf = "0.12"

# Chrono for timestamps
chrono = { version = "0.4", features = ["serde"] }

# UUID generation for LangChain compatibility
uuid = { version = "1.0", features = ["v4"] }

# Binary serialization for DiskANN
bincode = "1.3"

[dev-dependencies]
pretty_assertions = "1.0"
tempfile = "3.0"
criterion = "0.5"
proptest = "1.5"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
futures = "0.3"

[build-dependencies]
uniffi = { version = "0.28", features = ["build"], optional = true }

[[bench]]
name = "benchmarks"
harness = false

[features]
default = []
simd = []
# Async API without HTTP server - enables embedded async usage
async = ["tokio", "futures"]
# HTTP server (depends on async)
server = ["async", "axum", "tower", "tower-http", "governor", "tracing-subscriber", "hmac", "base64"]
web-ui = ["async", "axum"]
metrics = ["prometheus"]
hybrid = ["rust-stemmers"]
# Note: embeddings feature uses pre-release ort crate, consider unstable
embeddings = ["ort", "ndarray", "tokenizers"]
embedding-providers = ["async", "async-trait", "reqwest"]
full = ["server", "metrics", "hybrid", "web-ui", "embedding-providers"]
python = ["pyo3", "pythonize"]
wasm = ["wasm-bindgen", "js-sys", "web-sys"]
uniffi-bindings = ["uniffi"]
tui = ["async", "ratatui", "crossterm"]

[profile.release]
lto = true
codegen-units = 1

[profile.release-wasm]
inherits = "release"
opt-level = "s"
lto = true
