[workspace]
members = [".", "crates/needle-core", "crates/needle-cli", "crates/needle-python"]
default-members = [".", "crates/needle-core", "crates/needle-cli"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
authors = ["Anthropic <support@anthropic.com>"]
license = "MIT"
repository = "https://github.com/anthropics/needle"

[workspace.dependencies]
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
# Allow common pedantic lints that are too strict for this codebase
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
doc_markdown = "allow"
return_self_not_must_use = "allow"
struct_excessive_bools = "allow"
too_many_lines = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
cast_lossless = "allow"
if_not_else = "allow"
items_after_statements = "allow"
similar_names = "allow"
unreadable_literal = "allow"
wildcard_imports = "allow"
implicit_hasher = "allow"
unnecessary_wraps = "allow"
used_underscore_binding = "allow"
needless_pass_by_value = "allow"
option_if_let_else = "allow"
struct_field_names = "allow"
redundant_closure_for_method_calls = "allow"
uninlined_format_args = "allow"

[package]
name = "needle"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "An embedded vector database - SQLite for vectors"
license.workspace = true
keywords = ["vector", "database", "embedding", "hnsw", "similarity-search"]
categories = ["database", "algorithms", "science"]
repository.workspace = true
readme = "README.md"
default-run = "needle"
include = [
  "src/**/*.rs",
  "Cargo.toml",
  "LICENSE",
  "README.md",
  "CHANGELOG.md",
]

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/needle-{ target }{ archive-suffix }"
bin-dir = "needle-{ target }/{ bin }{ binary-ext }"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "needle"
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
# Core types (workspace crate)
needle-core = { path = "crates/needle-core" }

# Error handling
thiserror.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Memory mapping
memmap2 = "0.9"

# Random number generation
rand = "0.8"

# Ordered floats for comparison
ordered-float = "5.1"

# Parking lot for faster locks
parking_lot = "0.12"

# Parallelization
rayon = "1.10"

# LRU cache for query result caching
lru = "0.12"

# Logging/tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }

# CLI
clap = { version = "4", features = ["derive"] }

# HTTP Server (optional)
axum = { version = "0.7", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["cors", "trace", "limit", "timeout"], optional = true }
futures = { version = "0.3", optional = true }
governor = { version = "0.6", optional = true }

# Embedding providers (optional)
async-trait = { version = "0.1", optional = true }
reqwest = { version = "0.12", features = ["json"], optional = true }

# Metrics (optional)
prometheus = { version = "0.13", optional = true }

# Text indexing for hybrid search (optional)
rust-stemmers = { version = "1.2", optional = true }

# Python bindings (optional)
pyo3 = { version = "0.23", features = ["extension-module"], optional = true }
pythonize = { version = "0.23", optional = true }

# WASM bindings (optional)
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", optional = true }

# UniFFI for Swift/Kotlin bindings (optional)
uniffi = { version = "0.28", optional = true }

# ONNX Runtime for embedding inference (optional)
# Note: Using pre-release 2.0 as all 1.x versions have been yanked
ort = { version = "2.0.0-rc.11", optional = true }
ndarray = { version = "0.16", optional = true }
tokenizers = { version = "0.20", optional = true }

# Cloud Storage - AWS S3 (optional)
aws-config = { version = "1.5", optional = true }
aws-sdk-s3 = { version = "1.65", optional = true }
aws-smithy-types = { version = "1.2", optional = true }

# Cloud Storage - Google Cloud Storage (optional)
google-cloud-storage = { version = "0.22", optional = true }

# Cloud Storage - Azure Blob Storage (optional)
azure_storage = { version = "0.21", optional = true }
azure_storage_blobs = { version = "0.21", optional = true }
azure_identity = { version = "0.21", optional = true }

# GPU Acceleration - CUDA (optional, requires CUDA Toolkit)
cudarc = { version = "0.12", optional = true }

# GPU Acceleration - Metal (optional, macOS only)
metal = { version = "0.30", optional = true }
objc = { version = "0.2", optional = true }

# SIMD-optimized operations (auto-vectorization helpers)
wide = { version = "0.7", optional = true }

# TUI (optional)
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.28", optional = true }

# CDC / Streaming connectors (optional)
rdkafka = { version = "0.36", features = ["cmake-build"], optional = true }
pulsar = { version = "6.3", optional = true }
tokio-postgres = { version = "0.7", optional = true }
mongodb = { version = "3.1", optional = true }

# File hashing for backup
sha2 = "0.10"

# Authentication - JWT support (optional, used with server)
hmac = { version = "0.12", optional = true }
base64 = { version = "0.22", optional = true }

# Cryptography - AEAD encryption (optional, used by enterprise/encryption)
chacha20poly1305 = { version = "0.10", optional = true }
hkdf = { version = "0.12", optional = true }

# Chrono for timestamps
chrono = { version = "0.4", features = ["serde"] }

# UUID generation for LangChain/LlamaIndex compatibility
uuid = { version = "1.0", features = ["v4"], optional = true }

# Binary serialization for DiskANN
bincode = { version = "1.3", optional = true }

[dev-dependencies]
pretty_assertions = "1.0"
tempfile = "3.0"
criterion = "0.5"
proptest = "1.5"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
futures = "0.3"

[build-dependencies]
uniffi = { version = "0.28", features = ["build"], optional = true }

[[bench]]
name = "benchmarks"
harness = false

[[example]]
name = "hybrid_search"
required-features = ["hybrid"]

[features]
default = []
simd = []
# Async API without HTTP server - enables embedded async usage
async = ["tokio", "futures"]
# HTTP server (depends on async)
server = ["async", "axum", "tower", "tower-http", "governor", "tracing-subscriber", "hmac", "base64"]
web-ui = ["async", "axum"]
metrics = ["prometheus"]
hybrid = ["rust-stemmers"]
# Note: embeddings feature uses pre-release ort crate, consider unstable
embeddings = ["ort", "ndarray", "tokenizers"]
embedding-providers = ["async", "async-trait", "reqwest"]
# Enterprise encryption (ChaCha20-Poly1305)
encryption = ["chacha20poly1305", "hkdf"]
# DiskANN index support
diskann = ["bincode"]
# LangChain / LlamaIndex integration support
integrations = ["uuid"]
# Cloud storage backends
cloud-storage-s3 = ["async", "aws-config", "aws-sdk-s3", "aws-smithy-types"]
cloud-storage-gcs = ["async", "google-cloud-storage"]
cloud-storage-azure = ["async", "azure_storage", "azure_storage_blobs", "azure_identity"]
cloud-storage = ["cloud-storage-s3", "cloud-storage-gcs", "cloud-storage-azure"]
# GPU acceleration backends
gpu = ["wide"]
gpu-cuda = ["gpu", "cudarc"]
gpu-metal = ["gpu", "metal", "objc"]
full = ["server", "metrics", "hybrid", "web-ui", "embedding-providers", "encryption", "diskann", "integrations", "experimental"]
# Experimental modules - under active development, APIs may change
experimental = []
python = ["pyo3", "pythonize"]
wasm = ["wasm-bindgen", "js-sys", "web-sys"]
uniffi-bindings = ["uniffi"]
tui = ["async", "ratatui", "crossterm"]
# CDC / Streaming connectors
cdc-kafka = ["async", "rdkafka"]
cdc-pulsar = ["async", "pulsar"]
cdc-postgres = ["async", "tokio-postgres"]
cdc-mongodb = ["async", "mongodb"]
cdc = ["cdc-kafka", "cdc-pulsar", "cdc-postgres", "cdc-mongodb"]

[lints]
workspace = true

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1
strip = true

[profile.release-wasm]
inherits = "release"
opt-level = "s"
lto = true
