[package]
name = "needle-cli"
version = "0.1.0"
edition = "2021"
description = "CLI for the Needle vector database"
license = "MIT"

[[bin]]
name = "needle"
path = "src/main.rs"

[dependencies]
needle = { path = "../..", features = ["server"] }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rand = "0.8"
chrono = "0.4"
