[package]
name = "needle-cli"
version.workspace = true
edition.workspace = true
description = "CLI for the Needle vector database"
license.workspace = true

[[bin]]
name = "needle"
path = "src/main.rs"

[dependencies]
needle = { path = "../..", features = ["server"] }
clap = { version = "4", features = ["derive"] }
serde_json.workspace = true
tokio = { version = "1", features = ["full"] }
rand = "0.8"
chrono = "0.4"

[lints]
workspace = true
