[package]
name = "needle-cli"
version.workspace = true
edition.workspace = true
description = "CLI for the Needle vector database"
license.workspace = true

[lib]
name = "needle_cli"
path = "src/lib.rs"

[[bin]]
name = "needle"
path = "src/main.rs"

[dependencies]
needle = { path = "../.." }
clap = { version = "4", features = ["derive"] }
serde_json.workspace = true
tokio = { version = "1", features = ["full"] }
rand = "0.8"
chrono = "0.4"

[features]
default = ["server"]
server = ["needle/server"]
observability = ["needle/observability"]

[lints]
workspace = true

[dev-dependencies]
tempfile = "3.0"
