[package]
name = "needle-core"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
authors = ["Anthropic <support@anthropic.com>"]
description = "Core types for the Needle vector database"
license = "MIT"
repository = "https://github.com/anthropics/needle"

[dependencies]
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
