[package]
name = "needle-python"
version.workspace = true
edition.workspace = true
description = "Python bindings for the Needle vector database (cdylib wrapper)"
license.workspace = true
publish = false

[lib]
name = "needle_python"
crate-type = ["cdylib"]

[dependencies]
needle = { path = "../..", features = ["python"] }
pyo3 = { version = "0.23", features = ["extension-module"] }

[lints]
workspace = true
