[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "needle-langchain"
version = "0.1.0"
description = "LangChain vector store integration for the Needle vector database"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = []
keywords = ["needle", "langchain", "vector-store", "embeddings"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
langchain = ["langchain-core>=0.1"]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/anthropics/needle"
Repository = "https://github.com/anthropics/needle"
